deployment-pesbuk.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pesbuk-deployment
  namespace: production
  labels:
    app: pesbuk-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pesbuk-deployment
  template:
    metadata:
      labels:
        app: pesbuk-deployment
    spec:
      volumes:
        - name: config-secret
          configMap:
            name: p-fb-configmap-secret
      containers:
      - name: pesbuk-deployment
        image: fiardika/pesbuk-jenkins:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-secret
          mountPath: "/var/www/html/config.php"
          subPath: "config.php"
---

kind: Service
apiVersion: v1
metadata:
  name: pesbuk-service
  namespace: production
spec:
  selector:
    app: pesbuk-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: production
  annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/affinity: "cookie"
     nginx.ingress.kubernetes.io/session-cookie-name: "compro-prod-cookie"
     nginx.ingress.kubernetes.io/session-cookie-expires: "86400"
     nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/affinity-mode: persistent
     nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  rules:
  - host: pesbuk.fiardika.xyz
    http:
      paths:
        - backend:
           serviceName: pesbuk-service
           servicePort: 80
  - host: fiardika.fiardika.xyz
    http:
      paths:
        - backend:
           serviceName: landing-page-service
           servicePort: 80
  - host: blog.fiardika.xyz
    http:
      paths:
        - backend:
           serviceName: wordpress-service
           servicePort: 80
